fix: Fixed header spacing and navigation link styles
- Modified container global styles to enable correct width on desktop
- Modifed Nav Item styling to prevent unintentional color change when leaving hover state

--- a/probearbeit-tim/src/globals.css
+++ b/probearbeit-tim/src/globals.css
@@ -80,20 +80,18 @@
 
 
 @utility container {
+  max-width: 100%;
   margin-inline: auto;
   
   @variant sm {
-    max-width: 390px;
     padding-inline: 16px;
   }
 
   @variant md {
-    max-width: 834px;
     padding-inline: 32px;
   }
 
   @variant lg {
-    max-width: 1440px;
     padding-inline: 104px;
   }
 }
